package no.lambda.model;

public class Admin {
}
