package no.lambda.model;

public class Betaling {
}
