package no.lambda.model;

public class Bruker {
}
