package no.lambda.model;

public class Buss {
}
