package no.lambda.model;

public class Developer {
}

