package no.lambda.model;

public class Innlogging {
}
