package no.lambda.model;

public class Kart {
}
