package no.lambda.model;

public class Kunde {
}
