package no.lambda.model;

public class Rute {
    
}
