package no.lambda.model;

public class Stopp {
}
