package no.lambda.model;

public class Tog {
}
